--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <%= render 'layouts/nav' %>
+    <%= bootstrap_flash %>
+    <div class="container">
     <%= yield %>
+    </div>
   </body>
 </html>
